--- a/views/index.pug
+++ b/views/index.pug
@@ -4,10 +4,11 @@ block append scripts
   script(src="/javascripts/index.js")
 
 block content
-  h1= title
-
   .recipeContainer
     .recipeBase
+      h2(id="recipeBaseTitle")
+        | Base
+      
       .recipeBaseItem
         label Nicotine Base
         input(
@@ -15,6 +16,7 @@ block content
           name='inputNicotineBase'
           value='100'
           min='0'
+          step="any"
           data-bind='value: nicotineBase'
         ) 
         | mg/ml
@@ -25,6 +27,7 @@ block content
           name='inputTargetNicotine'
           value='3'
           min='0'
+          step="any"
           data-bind='value: targetNicotine'
         ) 
         | mg/ml
@@ -35,9 +38,46 @@ block content
           name='inputBatchSize'
           value='10'
           min='0'
+          step="any"
           data-bind='value: batchSize'
         ) 
-        | mg/ml
+        | ml
+      
+    .recipeFlavoring
+      h2(id="recipeFlavoringTitle")
+        | Flavorings
+      
+      span(
+        id="recipeFlavoringNoFlavors"
+        data-bind="text: noFlavors"
+      )
+
+
+      .recipeFlavorsContainer(
+        data-bind="foreach: flavors"
+      )
+        .recipeFlavor
+          label Name
+          input(
+            type="text"
+            class="recipeFlavorName"
+            data-bind="value: name, attr: {placeholder: index}"
+          )
+          label Amount
+          input(
+            type="number"
+            value="0"
+            min="0"
+            max="100"
+            step="any"
+            data-bind="value: percent"
+          )
+          | %
+
+      button(
+        id="recipeFlavoringAdd"
+        data-bind="click: addFlavor"
+      ) Add
 
     hr
 
@@ -62,3 +102,42 @@ block content
           data-bind="text: resultVGPercent"
         )
         | %
+      .recipeResultsItem(
+        data-bind="if: flavors().length > 0"
+      )
+        | Flavors&nbsp;
+        span(
+          data-bind="text: resultFlavorsML"
+        )
+        | ml&nbsp;
+        span(
+          data-bind="text: resultFlavorsPercent"
+        )
+        | %
+      
+      .recipeResultsFlavoringsContainer(
+        data-bind="foreach: flavors"
+      )
+        .recipeResultsItem
+          span
+            span(
+              data-bind="if: name().length > 0"
+            )
+              span(
+                data-bind="text: name"
+              )
+            span(
+              data-bind="if: name().length == 0"
+            )
+              span(
+                data-bind="text: index"
+              )
+          | &nbsp;
+          span(
+            data-bind="text: ml"
+          )
+          | ml&nbsp;
+          span(
+            data-bind="text: percent"
+          )
+          | %
