--- a/less/layout/base.less
+++ b/less/layout/base.less
@@ -1,8 +1,60 @@
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding-top: 5em;
+    font-family: 'Open Sans', sans-serif;
+    color: #222;
+
+    width: 1000px;
+    max-width: 95vw;
+
+    margin: auto;
 }
   
 a {
     color: #00B7FF;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, 
+        rgba(240,240,240,0) 0%, 
+        rgba(239,239,239,0.75) 10%, 
+        #EEE 50%, 
+        rgba(239,239,239,0.75) 90%, 
+        rgba(240,240,240,0) 100%
+    );
+}
+
+input[type="text"], input[type="number"] {
+    padding: 4px;
+
+    box-sizing: border-box;
+
+    background: rgba(0,0,0,0.01);
+
+    border: 1px solid rgba(0,0,0,0.03);
+    border-radius: 10px;
+    
+    box-shadow: inset 0px 0px 6px -4px rgba(0,0,0,0.25); 
+    color: #222;
+    font-family: 'Open Sans', sans-serif;
+}
+
+button {
+    cursor: pointer;
+
+    padding: 8px 16px 8px 16px;
+    
+    box-sizing: border-box;
+
+    background: rgba(0,0,0,0.07);
+
+    border: 1px solid rgba(0,0,0,0.09);
+    border-radius: 5px;
+    
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.125);
+
+    color: #222;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
 }
