--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
 
     block stylesheets
       link(rel='stylesheet', href='/stylesheets/style.css')
+      link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Pacifico")
 
     block scripts
       script(src="/javascripts/knockout-latest.js")
