--- a/less/layout/base.less
+++ b/less/layout/base.less
@@ -1,5 +1,6 @@
 body {
-    padding-top: 5em;
+    padding-top: 6em;
+    padding-bottom: 1em;
     font-family: 'Open Sans', sans-serif;
     color: #222;
 
