--- a/less/variables/colors.less
+++ b/less/variables/colors.less
@@ -1,3 +1,4 @@
+// Primary color
 @color-primary: #68C21D;
 
 @color-primary-light: #83CF44;
@@ -5,3 +6,13 @@
 
 @color-primary-dark: #4D990E;
 @color-primary-darker: #357600;
+
+
+// Secondary color
+@color-secondary: #D82025;
+
+@color-secondary-light: #E64B4F;
+@color-secondary-lighter: #FD7A7D;
+
+@color-secondary-dark: #AA1014;
+@color-secondary-darker: #840003;
