--- a/less/layout/base.less
+++ b/less/layout/base.less
@@ -17,6 +17,7 @@ a {
 hr {
     border: 0;
     height: 1px;
+    width: 100%;
     background-image: linear-gradient(to right, 
         rgba(240,240,240,0) 0%, 
         rgba(239,239,239,0.75) 10%, 
