--- a/views/recipes.pug
+++ b/views/recipes.pug
@@ -1,42 +1,14 @@
 extends layout
 
+block append scripts
+  script.
+    var recipe = !{JSON.stringify(recipe)};
+
+  script(src="/javascripts/recipes.js")
+
 block content
-  //- Begin Code block
-  -
-    var parsePrecision = function parseNumberToFloatValueWithSetPrecision(num, precision) {
-        return Number(
-            parseFloat(num).toFixed(
-                (precision == undefined ? valuePrecision : precision)
-            )
-        );
-    }
-
-    recipe.vgML = parsePrecision(recipe.batchSize * recipe.vgRatio / 100)
-
-    recipe.resultNicotineSolutionML = parsePrecision(recipe.targetNicotine / recipe.nicotineBase * recipe.batchSize);
-    recipe.resultNicotineSolutionPercent = parsePrecision(recipe.resultNicotineSolutionML / recipe.batchSize * 100);
-
-    recipe.totalFlavorPercent = 0;
-    recipe.totalFlavorML = 0;
-    for (var i = 0; i < recipe.flavors.length; i++) {
-      recipe.totalFlavorPercent += parseFloat(recipe.flavors[i].percent);
-      recipe.flavors[i].ml = parseFloat(recipe.batchSize * recipe.flavors[i].percent / 100);
-      recipe.totalFlavorML += recipe.flavors[i].ml;
-    }
-    recipe.totalFlavorPercent = parsePrecision(recipe.totalFlavorPercent);
-    recipe.totalFlavorML = parsePrecision(recipe.totalFlavorML);
-
-    recipe.pgRatio = parsePrecision(100 - recipe.vgRatio);
-    recipe.pgML = parsePrecision((recipe.batchSize * recipe.pgRatio / 100) - recipe.resultNicotineSolutionML - recipe.totalFlavorML)
-    recipe.resultPGPercent = parsePrecision(recipe.pgML / recipe.batchSize * 100);
-
-    recipe.resultBaseML = parsePrecision(recipe.batchSize - recipe.totalFlavorML);
-    recipe.resultBasePercent = parsePrecision(recipe.resultBaseML / recipe.batchSize * 100);
-  //- End Code Block
-
   .recipeContainer
-    .recipeName 
-      | !{recipe.recipeName}
+    .recipeName(data-bind="text: recipeName")
 
   .recipeContainer
     .recipeComplete
@@ -49,51 +21,105 @@ block content
 
       .recipeResultName.recipeResultBaseTotal
         | Base Total
-      .recipeResultML.recipeResultBaseTotal= recipe.resultBaseML
+      .recipeResultML.recipeResultBaseTotal(
+        data-bind="text: resultBaseML"
+      )
       .recipeResultMLSymbol.recipeResultBaseTotal
         | ml
       .recipeResultPercent.recipeResultBaseTotal
-        | #{recipe.resultBasePercent}%
+        span(
+          data-bind="text: resultBasePercent"
+        )
+        | %
 
       .recipeResultName
         | Nicotine Solution
-      .recipeResultML= recipe.resultNicotineSolutionML
+      .recipeResultML
+        span(
+          data-bind="text: resultNicotineSolutionML"
+        )
       .recipeResultMLSymbol
         | ml
       .recipeResultPercent
-        | #{recipe.resultNicotineSolutionPercent}%
+        span(
+          data-bind="text: resultNicotineSolutionPercent"
+        )
+        | %
 
       .recipeResultName
         | VG
-      .recipeResultML= recipe.vgML
+      .recipeResultML
+        span(
+          data-bind="text: resultVGML"
+        )
       .recipeResultMLSymbol
         | ml
       .recipeResultPercent
-        | #{recipe.vgRatio}%
+        span(
+          data-bind="text: resultVGPercent"
+        )
+        | %
       
       .recipeResultName
         | PG
-      .recipeResultML= recipe.pgML
+      .recipeResultML
+        span(
+          data-bind="text: resultPGML"
+        )
       .recipeResultMLSymbol
         | ml
       .recipeResultPercent
-        | #{recipe.resultPGPercent}%
-    
-      if recipe.flavors.length > 0
-        .recipeResultName.recipeResultFlavorTotal
-          | Flavor Total
-        .recipeResultML.recipeResultFlavorTotal= recipe.totalFlavorML
-        .recipeResultMLSymbol.recipeResultFlavorTotal
-          | ml
-        .recipeResultPercent.recipeResultFlavorTotal
-          | #{recipe.totalFlavorPercent}%
-        
-        .recipeResultsFlavoringsContainer
-          each flavor in recipe.flavors
-            .recipeResultName= flavor.name
+        span(
+          data-bind="text: resultPGPercent"
+        )
+        | %
 
-            .recipeResultML= flavor.ml
-            .recipeResultMLSymbol
-                | ml
-            .recipeResultPercent
-                | #{flavor.percent}%
+      .recipeResultName.recipeResultFlavorTotal(
+        data-bind="if: flavors().length > 0"
+      )
+        | Flavor Total
+      .recipeResultML.recipeResultFlavorTotal(
+        data-bind="if: flavors().length > 0"
+      )
+        span(
+          data-bind="text: resultFlavorsML"
+        )
+      .recipeResultMLSymbol.recipeResultFlavorTotal(
+        data-bind="if: flavors().length > 0"
+      )
+        | ml
+      .recipeResultPercent.recipeResultFlavorTotal(
+        data-bind="if: flavors().length > 0"
+      )
+        span(
+          data-bind="text: resultFlavorsPercent"
+        )
+        | %
+      
+      .recipeResultsFlavoringsContainer(
+        data-bind="foreach: flavors"
+      )
+        .recipeResultName
+          span(
+            data-bind="if: name().length > 0"
+          )
+            span(
+              data-bind="text: name"
+            )
+          span(
+            data-bind="if: name().length == 0"
+          )
+            span(
+              data-bind="text: index"
+            )
+        .recipeResultML
+          span(
+            data-bind="text: ml"
+          )
+        .recipeResultMLSymbol
+          | ml
+        .recipeResultPercent
+          span(
+            data-bind="text: percentParsed"
+          )
+          | %
